# unichat

./: .editorconfig  .gitignore  .taurignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  run.sh  tauri.conf.json
(un)released-notes/: 1.5.0.md
.forgejo/workflows/: main.yaml
.github/actions/setup-node/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-tauri/: action.yml
.github/actions/tauri-setup/: action.yaml
.github/actions/upload-artifact/: action.yml
.github/actions/webapp-setup/: action.yaml
.github/workflows/: main.yaml  package.yaml  release.yaml
capabilities/: default.json  popouts.json  scrapers.json  scrappers.json  twitch-chat.json  youtube-chat.json
docs/: README.md  _navbar.md  _sidebar.md  index.html
docs/plugins/: auxiliary_modules.md  getting_started.md  global_factories.md  modules.md  scraper_api.md  unichat_api.md
docs/pt-br/: README.md  _sidebar.md
docs/pt-br/plugins/: auxiliary_modules.md  getting_started.md  global_factories.md  modules.md  scraper_api.md  unichat_api.md
docs/pt-br/widgets/: events.md  fields.md  getting_started.md  unichat_api.md
docs/widgets/: events.md  fields.md  getting_started.md  unichat_api.md
examples/: 1 - New Message.json  1 - New message.json  2 - Remove message.json  3 - Remove user.json  4 - Sending raid.json  5 - Receiving raid.json  6 - Sponsor gift.json  7 - Membership.json  8 - Membership with message.json  9 - Super chat.json  twitch-irc.txt
examples/twitch/: 1. Connect to Chat.txt  10. Raid.txt  11. Announcement.txt  12. Community Gift.txt  13. Community Gift Receiver.txt  14. Direct Subscription Gift.txt  15. Subscription.txt  16. Resubscription.txt  2. New Message.txt  3. New Message with Cheer.txt  4. New Message Power-ups Message Effects.txt  5. New Message Power-ups Gigantify an Emote.txt  6. New Message With Me Action.txt  7. Remove Message.txt  8. Remove User.txt  9. Clear Chat.txt
icons/: icon.icns
overlays/default/: index.html  main.js  style.css
plugins/: .luarc.json
plugins/.types/: UniChatAPI.lua
plugins/plugin-example/: manifest.yaml
plugins/plugin-example/data/: main.lua
plugins/plugin-kick/: LICENSE  manifest.yaml
plugins/plugin-kick/data/: main.lua
plugins/types/: UniChatAPI.lua
src/: commands.rs  js_def.rs  lib.rs  main.rs  youtube.rs
src/actix/: mod.rs  routes.rs
src/actix/routes/: assets.rs  gallery.rs  mod.rs  proxy.rs  widget.rs  ws.rs  ytimg.rs
src/actix/static/: index.html  index.html.template
src/axum/: mod.rs
src/axum/routes/: assets.rs  gallery.rs  mod.rs  proxy.rs  rpc.rs  widget.rs  ws.rs
src/axum/static/: index.html.template
src/axum/utils/: mod.rs
src/bttv/: mod.rs
src/commands/: emulator.rs  gallery.rs  mod.rs  plugins.rs  scrapers.rs  scrappers.rs  store.rs  tour.rs  userstore.rs  webview.rs  widgets.rs
src/custom_emotes/: betterttv.rs  frankerfacez.rs  mod.rs  seventv.rs
src/error/: mod.rs
src/events/: event_emitter.rs  mod.rs  unichat.rs
src/irc/: mod.rs
src/jsonrpc/: mod.rs
src/plugins/: mod.rs  plugin_instance.rs  plugin_manifest.rs  unichat_api.rs  unichat_event.rs  unichat_json.rs  unichat_logger.rs  unichat_std.rs  unichat_strings.rs  unichat_time.rs
src/plugins/instance/: mod.rs
src/plugins/lua_env/: mod.rs  unichat_api.rs  unichat_event.rs  unichat_http.rs  unichat_json.rs  unichat_logger.rs  unichat_std.rs  unichat_strings.rs  unichat_time.rs  unichat_yaml.rs
src/plugins/manifest/: mod.rs
src/plugins/runtime/: mod.rs
src/plugins/utils/: mod.rs
src/render/: mod.rs
src/scraper/: mod.rs
src/scraper/static/: common_scraper.js
src/scrapper/: mod.rs
src/scrapper/static/: common_scrapper.js
src/shared_emotes/: betterttv.rs  frankerfacez.rs  mod.rs  seventv.rs
src/store/: mod.rs
src/twitch/: mod.rs
src/twitch/mapper/: mod.rs  privmsg.rs
src/twitch/static/: scraper.js  scrapper.js
src/utils/: base64.rs  constants.rs  irc.rs  jsonrpc.rs  mod.rs  properties.rs  render_emitter.rs  semver.rs  semver_test.rs  settings.rs  ureq.rs  userstore.rs
src/utils/static/: common_scrapper.js
src/webserver/: mod.rs  routes.rs
src/widgets/: mod.rs
src/youtube/: mod.rs
src/youtube/mapper/: mod.rs
src/youtube/static/: scraper.js  scrapper.js
webapp/: .editorconfig  .eslintignore  .eslintrc.cjs  .eslintrc.json  .npmrc  .prettierrc.cjs  .prettierrc.json  babel.config.js  index.html  jest.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  tailwind.config.cjs  tsconfig.app.json  tsconfig.json  tsconfig.node.json  twin.config.cjs  vite.config.js  vite.config.ts  webpack.config.js
webapp/.storybook/: main.ts  preview.tsx
webapp/__stories__/: Button.stories.tsx
webapp/__tests__/: dummy.test.tsx  setupTests.ts
webapp/public/: index.html  scraper_idle.html  scrapper_idle.html  splash-screen.html  twitch-await.html  youtube-await.html
webapp/src/: App.tsx  index.tsx  main.tsx
widgets/: fields-schema.json  jsconfig.json  unichat.d.ts
widgets/activity-feed/: main.html  script.js  style.css  widget.css
widgets/default/: LICENSE  fields.json  main.html  script.js  style.css  widget.css  widget.js
widgets/raid/: fields.json  script.js  style.css
zztools/: build.sh  check-license-header.py  confirm.py  exec.py  gen-licenses  logger.py  release  release.py  semver.py  setversion.py
zztools/scripts/: gen-licenses.js  release.js
zztools/utils/: __init__.py  confirm.py  constants.py  exec.py  logger.py  logger.sh  main.sh  semver.py  semver.sh
(+429 files in other folders)
