[package]
name = "unichat"
version = "1.4.0-rc.5"
description = "A cross-platform desktop application for managing YouTube and Twitch chats."
authors = ["Voguh <voguhofc@protonmail.com>"]
homepage = "https://github.com/voguh/unichat"
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tauri-build = { version = "2.5.3", features = [] }
ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }

[dependencies]
actix-web = "4.12.1"
actix-ws = "0.3.0"
anyhow = { version = "1.0.100", features = ["backtrace"] }
base64 = "0.22.1"
futures = "0.3.31"
if-addrs = "0.14.0"
infer = "0.19.0"
log = "0.4.29"
mime_guess = "2.0.5"
mlua = { version = "0.11.5", features = ["lua54", "vendored", "serde", "send"] }
moka = { version = "0.12.12", features = ["sync"] }
rand = "0.9.2"
regex = "1.12.2"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_plain = "1.0.2"
serde-saphyr = "0.0.14"
tauri = { version = "2.9.5", features = ["native-tls"] }
tauri-plugin-dialog = "2.5.0"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.3"
tauri-plugin-store = "2.4.2"
tokio = { version = "1.49.0", features = ["full"] }
ureq = { version = "3.1.4", default-features = false, features = ["json", "native-tls"] }
url = { version = "2.5.7", features = ["serde"] }
indexmap = { version = "2.13.0", features = ["serde"] }
