[package]
name = "unichat"
version = "1.5.0-alpha.1"
description = "A cross-platform chat integration without API keys, OAuth, or accounts."
authors = ["Voguh <voguhofc@protonmail.com>"]
homepage = "https://codeberg.org/unichat/unichat"
license = "EPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tauri-build = { version = "2.6.0", features = [] }

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
axum = { version = "0.8.9", features = ["ws"] }
base64 = "0.22.1"
futures = "0.3.32"
if-addrs = "0.15.0"
indexmap = { version = "2.14.0", features = ["serde"] }
infer = "0.19.0"
log = "0.4.29"
mime_guess = "2.0.5"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serde", "send"] }
moka = { version = "0.12.15", features = ["sync"] }
rand = "0.10.1"
regex = "1.12.3"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "charset", "json", "native-tls", "stream", "system-proxy"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_plain = "1.0.2"
serde-saphyr = "0.0.26"
tauri = { version = "=2.11.0", features = ["native-tls"] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-log = "=2.8.0"
tauri-plugin-opener = "=2.5.4"
tauri-plugin-store = "=2.4.3"
tokio = { version = "1.52.2", features = ["full"] }
url = { version = "2.5.7", features = ["serde"] }
